objects/AI_Agent_Conversation_Entry__c.object
<CustomObject>
    <description>Used by the AI Agents demo component to show a conversation between an AI Agent and an end customer</description>
    <fields>
        <fullName>AI_Agent_Conversation__c</fullName>
        <description>Conversation this entry relates to</description>
        <label>AI Agent Conversation</label>
        <referenceTo>AI_Agent_Conversation__c</referenceTo>
        <relationshipLabel>AI Agent Conversation Entries</relationshipLabel>
        <relationshipName>AI_Agent_Conversation_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Entry_Time__c</fullName>
        <description>Time this entry was sent - determines the order</description>
        <label>Entry Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsDemoResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for demo responses to automate a conversation while monitoring - will send each response with this set to true every 3 seconds</description>
        <label>IsDemoResponse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spoken_By__c</fullName>
        <description>Who sent the message - determines how it is shown in the window</description>
        <label>Spoken By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Agent</fullName>
                    <default>true</default>
                    <label>Agent</label>
                </value>
                <value>
                    <fullName>Bot</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transcript__c</fullName>
        <description>The contents of the message</description>
        <label>Transcript</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Translation__c</fullName>
        <label>Translation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Speech</fullName>
                    <default>true</default>
                    <label>Speech</label>
                </value>
                <value>
                    <fullName>Left Chat</fullName>
                </value>
                <value>
                    <fullName>End Chat</fullName>
                </value>
                <value>
                    <fullName>Participant Change</fullName>
                </value>
                <value>
                    <fullName>Flag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AI Agent Conversation Entry</label>
    <nameField>
        <displayFormat>ACE-{0000}</displayFormat>
        <label>AI Agent Conversation Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Agent Conversation Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>